imagePicker styling fix
Image preview was not places correctly, and overlapped the side menu.

These two changes seem to fix it.
image and "deselect" crosses both has to be changed to match.

--- a/src/Ucommerce.Sitecore.Web/Css/Sitecore8/UI.css
+++ b/src/Ucommerce.Sitecore.Web/Css/Sitecore8/UI.css
@@ -123,9 +123,14 @@ body * {
   height: 100%;
 }
 
+.imagePickerContainer .imagePickerContainerBody.propertyItem {
+  display: flex !important;
+}
+
 .imagePicker .imagePickerContainer.propertyPane {
   height: 335px !important;
   overflow-x: auto;
+  display: flex;
 }
 
 .imagePicker .preselectedValues.multiPicker {
